2023-04-12  Karl Berry  <karl@freefriends.org>

	* tests/bibtex8.test,
	* tests/bibtexu.test: use different basenames for the
	different bibtex programs. Hoping to fix report of sporadic
	failures from Werner Fink, 12 Apr 2023 12:46:56.

2023-04-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/substr[au].bbl, tests/testsubstr.bst:
	Add more tests for substring$.

2023-01-29  Karl Berry  <karl@freefriends.org>

	* tests/bibtexu-sort.test,
	* tests/bibtexu-char.test: set LC_ALL and LANGUAGE to avoid
	locale-dependent failure. Report from Johannes Hielscher,
	tlbuild mail 29 Jan 2023 16:28:24.
	(Also minor shell portability changes.)

2022-09-12  Karl Berry  <karl@freefriends.org>

	* README: new file to mention both programs.
	* bibtex8.1: remove old addresses for Kempson and Aguilar-Sierra.

2022-09-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.c:
	Initialize max_print_line after checking options.
	This change prevents unwanted looking for texmf.cnf.

2022-08-30  Karl Berry  <karl@freefriends.org>

	* bibtex8.1,
	* bibtexu.1: typo fixes from Hilmar Preu\ss{}e,
	https://tug.org/pipermail/tex-live/2022-June/048227.html

2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (22 may 2022).
	* bibtex.c, utils.c, version.h:
	Show "Release version" and TeX Live version at the first line
	of a banner.

2022-05-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (17 may 2022).
	* bibtex-4.c, bibtex.h:
	Fix a bug of text.prefix$ and text.length$ in bibtexu.
	* tests/testsubstr[au].bib, substr[au].bbl, txtprfx[au].bbl:
	Update tests.

2022-05-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (8 may 2022).
	* bibtex-2.c:
	Set LEGAL_ID_CHAR to id_class of 8bit characters.
	* Makefile.am, tests/bibtex[8u].test,
	tests/bibtex8-char.test, tests/bibtexu-sort.test,
	tests/test{case,char,name,period,substr,txtprfx,width,iscjk}.bst,