@@ -2818,7 +2818,9 @@ BEGIN
           case UBLOCK_CJK_UNIFIED_IDEOGRAPHS_EXTENSION_D:
           case UBLOCK_CJK_UNIFIED_IDEOGRAPHS_EXTENSION_E:
           case UBLOCK_CJK_UNIFIED_IDEOGRAPHS_EXTENSION_F:
+#if defined(UBLOCK_CJK_UNIFIED_IDEOGRAPHS_EXTENSION_G)
           case UBLOCK_CJK_UNIFIED_IDEOGRAPHS_EXTENSION_G:
+#endif
             string_width |= 0x001;
             break;
       /* kana */
@@ -2826,8 +2828,12 @@ BEGIN
           case UBLOCK_KATAKANA:
           case UBLOCK_KATAKANA_PHONETIC_EXTENSIONS:
           case UBLOCK_KANA_EXTENDED_A:
+#if defined(UBLOCK_KANA_EXTENDED_B)
           case UBLOCK_KANA_EXTENDED_B:
+#endif
+#if defined(UBLOCK_SMALL_KANA_EXTENSION)
           case UBLOCK_SMALL_KANA_EXTENSION:
+#endif
             string_width |= 0x002;
             break;
       /* hangul */
