@@ -1,3 +1,12 @@
+2023-07-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* utils.c, gblprocs.h:
+	Enable to build with system ICU DLL icu.dll
+	for Windows 10 version 1903 (May 2019 Update) or later.
+	https://learn.microsoft.com/en-us/windows/win32/intl/international-components-for-unicode--icu-
+	* bibtex-{1,4}.c:
+	Enable to build with older ICU.
+
 2023-04-12  Karl Berry  <karl@freefriends.org>
 
 	* tests/bibtex8.test,
